# portfolio

./: .gitignore  CLAUDE.md  Cloud.md  Makefile  README.md  middleware.ts  next.config.ts  package-lock.json  package.json
.github/workflows/: docker-image.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/agent/: assistant.py  build_index.py  knowledge.py
backend/app/api/: routes.py
backend/app/core/: config.py  turnstile.py
backend/app/schemas/: chat.py  contact.py
backend/knowledge/: CLAUDE.md  README.md  contact-software.md  plm-migration.md  tech-ki.md  tech-web-infrastruktur.md  website-kontakt.md  website-profil.md  website-projekte.md  website-werdegang.md
docs/: agent.md  concept.md  i18n.md  issue-12-impressum-notes.md  wissensbasis.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/messages/: de.json  en.json
frontend/scripts/: export-knowledge.ts
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
frontend/src/components/: assistant-client.tsx  assistant.tsx  chat-consent.tsx  chat-cta.tsx  chat-gate.tsx  chat-nav-link.tsx  chat-widget.tsx  contact-form.tsx  contact-menu.tsx  glass-hover-card.tsx  icons.tsx  locale-switcher.tsx  mobile-nav.tsx  page-shell.tsx  profil-pdf.tsx  site-footer.tsx  site-header.tsx  theme-toggle.tsx
messages/: de.json  en.json
scripts/: dev.sh
src/app/: layout.tsx  page.tsx
src/i18n/: routing.ts
(+39 files in other folders)
