[project]
name = "mxdigital-backend"
version = "0.1.0"
description = "MX Digital — FastAPI Backend (Kontaktformular & API)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.137.2",
    "numpy>=2.5.1",
    "pydantic-ai-slim[openai,ui]>=2.7.0",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
]

[dependency-groups]
dev = []
